--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
     transform: scaleX(1);
   }
   to {
-    transform: scaleX(1.05);
+    transform: scaleX(1.02);
   }
 }
 
@@ -125,7 +125,7 @@
   }
   .boton1 {
     border: 1px solid #2e7d8b; /*anchura, estilo y color borde*/
-    padding: 10px; /*espacio alrededor texto*/
+    padding: 10px; /*espaci alrededor texto*/
     background-color: #2e7d8b; /*color botón*/
     color: #ffffff; /*color texto*/
     text-decoration: none; /*decoración texto*/
@@ -143,3 +143,64 @@
       font-family: 'Helvetica', sans-serif; /*tipografía texto*/
       border-radius: 50px; /*bordes redondos*/
       }
+/*
+Fonts
+*/
+
+/*
+Fonts
+*/
+
+.slider{
+  width: 800px;
+  height: 500px;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+  border-radius: 50px;
+}
+.slide{
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+  transition: all 0.5s ease;
+}
+#first{
+  background-image: url(./img/1.jpg);
+} 
+#second {
+  background-image: url(./img/2.jpg);
+}
+#third{
+  background-image: url(./img/3.jpg);
+}
+#check-left{
+  left: 5%;
+}
+#check-right{
+  right: 5%;
+}
+.buttoncar{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  outline: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+#spanc{
+  color: #FFCA52;
+  text-shadow: 0px 0px 3px #080008;
+}
+#h3c{
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  bottom: 0;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.2);
+  color: white;
+  text-shadow: 0px 0px 3px #080008;
+}
